--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url =jdbc:mysql://localhost:3306/mobilemeeting?useSSL=false
+jdbc.url =jdbc:mysql://120.78.123.233:3306/mobilemeeting?useSSL=false
 jdbc.username =root
 jdbc.password = 123456
